optimize for 80mb dataset (10mil entries- <4min)